reduce container size slightly on small screen to avoid scraping screen edges

--- a/static/css/crash-archive.css
+++ b/static/css/crash-archive.css
@@ -34,6 +34,6 @@ table.bordered > tbody > tr > th, td {
 
 @media only screen and (max-width: 600px) { /* don't waste space on mobile */
 	.container {
-		width: 100%;
+		width: 98%;
 	}
 }
